# xRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: debug.h
include/core/: window.h  window_settings.h
include/graphics/: shader.h  shader_program.h  texture.h
include/input/: keyboard.h
include/manager/: resource_manager.h
src/: CMakeLists.txt
src/core/: window.cc  window_settings.cc
src/graphics/: shader.cc  shader_program.cc  texture.cc
src/manager/: resource_manager.cc
